respect cycles with just one element
- why: to be able to calculate the type of a cycle
- see https://de.wikipedia.org/wiki/Zykeltyp
- Jeder Zyklus hat Länge ≥1